--- a/src/styles/style_comp/skill_tag.css
+++ b/src/styles/style_comp/skill_tag.css
@@ -2,10 +2,12 @@
     border: solid 1px transparent;
     border-radius: 5px;
     margin: 0.25rem;
-    padding: 0.25rem 0.5rem;
-    -webkit-box-shadow: 10px 10px 5px 0px rgba(235,235,235,1);
-    -moz-box-shadow: 5x 5x 5px 0px rgba(235,235,235,1);
-    box-shadow: 5px 5px 5px 0px rgba(235,235,235,1);
+    padding: 0.25rem 0.5rem;    
+    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.4);
+    
+}
+.masonry .skill_tag {
+    font-size: 0.8rem;
 }
 
 .job_hyperlink {
@@ -136,6 +138,6 @@
     background: #d0bfff;
 
 }
-tag_dev_0 {
+.tag_dev_0 {
     background: #f8f0fc;
 }
