--- a/src/styles/work.css
+++ b/src/styles/work.css
@@ -26,7 +26,7 @@
     border-radius: 15px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
   }
-  .job h2,h3,h4 {
+  .job h2,.job h3,.job h4 {
     text-align: center;
 }
   .job h2 {
