--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -33,6 +33,7 @@
 }
 
 .masonry-item {
+  display: block;
   break-inside: avoid-column;
   margin-bottom: 0.75rem;
   padding: 0.5rem 1rem;
@@ -51,12 +52,12 @@
 }
 .masonry-item h3{
   font-style: italic;
-  color: #555960; 
+  color: #454545; 
 }
 .masonry-item h4{
   font-size: 0.9rem;
   padding: 0.75rem 0;
-  color: darkslategray;
+  color: grey;
 }
 
 .filter-items {
