--- a/src/styles/style_comp/dark-mode.css
+++ b/src/styles/style_comp/dark-mode.css
@@ -1,12 +1,25 @@
 /* Light mode and dark mode */
-.dark-mode header,.contents {
+.dark-mode header,.dark-mode .contents {
     background-color: rgba(0, 0, 0, 0.6);
     z-index: -1;
+    
   }
   .dark-mode .bg-set {
-    background-color: rgba(0,0,0,0.2);
+    background-color: rgba(0,0,0,0.3);
+  }
+  .dark-mode #me_header {
+    color: white;
   }
   .dark-mode div {
     color: white;
+    
+  }
+  .dark-mode .job, .dark-mode .masonry-item{
+    background-color: rgba(28,28,28);
+    color: rgb(230, 230, 230);
+  }
+  .dark-mode .skill_tag {
+    color: black;
+    box-shadow: 0 2px 4px black;
   }
   
