--- a/src/styles/me.css
+++ b/src/styles/me.css
@@ -30,7 +30,7 @@
       justify-content: stretch;
       width: 100%;
     }
-    #me_me, #me_contact, #detailme div{
+    #me_me, #me_contact, #detailme div:first-child, #dev_container{
       padding: 0.75rem;
       width: 100%;
       text-align: left;
@@ -89,20 +89,75 @@
       .contact_opt:last-child a{
         background-color: white;
       }
+
+      
       @keyframes bounce {
         0% { transform: translateY(0); }
         50% { transform: translateY(-10px); }
         100% { transform: translateY(0); }
       }
       
+      /* Dev Skills */
+      #dev_container {
+        
+      }
+      #dev_skills {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+      }
       
+      .dev_skill {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 80px;
+        height: 80px;
+        border-radius: 50%;
+        border: 8px solid #08DB72;
+        margin: 0.25rem;
+        margin-bottom: 1rem;
+        
+      }
+      :root {
+        --charging: #08DB72;
+        --uncharging: rgba(255, 255, 255, .5);
+      }
+      .dev_skill_25 {
+
+        border-color: var(--charging)var(--uncharging)var(--uncharging) var(--uncharging);
+      
+      }
+      .dev_skill_50 {
+
+        border-color: var(--charging)var(--charging)var(--uncharging) var(--uncharging);
+      
+      }
+      .dev_skill_75 {
+
+        border-color: var(--charging)var(--charging)var(--charging) var(--uncharging);
+      
+      }
+      
+      .skill_name {
+        font-size: 1rem;
+        font-weight: bold;
+        text-align: center;
+        margin-bottom: 0.5rem;
+      }
+      
+      .skill_duration {
+        font-size: 0.8rem;
+        text-align: center;
+      }
 
       @media screen and (max-width: 1024px) {
         #me_header {
           font-size: 2.5rem;
         }
         #me_me,
-        #me_contact, #detailme div {
+        #me_contact, #detailme div:first-child, #dev_container  {
           padding: 0.75rem;
         }
         #ap_bg {
